--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,6 +36,13 @@ p{
     padding: 0;
     
 }
+.butt:active{
+    background-color: #ff762d00;
+    color: #FF782D;
+    border: 2px solid #FF782D;
+    padding: 0;
+    
+}
  .bt1{
                 width: 161px;
                 height: 48px;
@@ -55,6 +62,7 @@ p{
                 color: #FFFFFF;
                 border: none;
 }
+
   /* --------End Basic Classes----------- */
 
 
@@ -108,7 +116,7 @@ header{
                 position: absolute;
                 left: 48%;
                 gap: 20px;
-                margin-top: 3px;
+                margin-top: 1px;
             }
         }
 
@@ -274,6 +282,7 @@ main{
                         position: absolute;
                         margin: 20px;
                         cursor: pointer;
+                        
                         
 
                     }
@@ -719,6 +728,9 @@ footer{
                     text-align: center;
                 }
                 button{
+                    &:active{
+
+                    }
                     
                 }
             }
